--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
 
         <div class="caption">
-            <p>VIGNESH M</p>
+            <p>VIGNESH</p>
         </div>
     </div>
 
